Troubleshooting styling issues on mobile browser

--- a/src/index.sass
+++ b/src/index.sass
@@ -80,7 +80,7 @@ $gable-width-sm-screen: 59.6vw
 
 
 .gable
-    position: relative
+    position: absolute
     border-top: $line-width-heavy solid black
     border-left: $line-width-heavy solid black
     @media (max-width: 640px)
@@ -246,7 +246,7 @@ $gable-width-sm-screen: 59.6vw
         // transform-origin: center
         
 .navContainer1
-    position: relative
+    position: absolute
     display: flex
     flex-direction: column
     align-items: center
